test/integration/cli-args/sstanc.t/fail/bad-double-observe.stan
data {
  real y;
}
model {
  y ~ normal(0, 1);
  y ~ normal(1, 1);
}
